# NekiraDelegate

./: .gitignore  CMakeLists.txt  README.EN.md  README.md
CallableInterface/: CallableFactory.hpp  CallableInterface.hpp
Delegate/: Delegate.hpp
Demo/: NekiraDelegate.cpp
Documents/NekiraDelegate/: MultiDelegate.MD  SingleDelegate.MD
Documents/README/: README.CN.MD  README.EN.MD
FunctionTraits/: FunctionTraits.hpp
Modules/: CMakeLists.txt
Modules/Core/: CMakeLists.txt
Modules/SignalSlot/: CMakeLists.txt
cmake/: NekiraDelegateLibConfig.cmake.in
include/: CMakeLists.txt
include/NekiraDelegate/: CMakeLists.txt
include/NekiraDelegate/Core/: Delegate.hpp
include/NekiraDelegate/SignalSlot/: Connection.hpp  SignalType.hpp
source/SignalSlot/: Connection.cpp
